# slambox-ros

./: .clang-format  .ducker.yaml  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Doxyfile  DoxygenLayout.xml  README.md  compile_commands.json  package.xml  run_check.sh
.github/workflows/: docker-build-test.yaml
config/: client.yaml  slambox_ros.rviz
docker/: Dockerfile  Dockerfile.aarch64
docs/: index.md
include/applications/: config_cli_app.hpp  driver_client.hpp
include/utils/: ros_msg_converter.hpp  string_utils.hpp
launch/: slambox_ros_client.launch
src/: config_cli.cpp  node_client.cpp
src/applications/: config_cli_app.cpp  driver_client.cpp
src/utils/: ros_msg_converter.cpp  string_utils.cpp
tests/: test_msg_converter.cpp  test_string_utils.cpp
